# bitarray

./: pyproject.toml
.github/workflows/: build_wheels.yml
bitarray/: __init__.py  __init__.pyi  _bitarray.c  _bitarray.cp312-win_amd64.pyd  _util.cp312-win_amd64.pyd  test_bitarray.py
examples/: encode_ixyz.py
