[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitarray"
version = "3.0.0"  
description = "Fork of bitarray with custom C-implemented IXYZ codec and commutes_with"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "PSF" }
authors = [
    { name = "Konstantin Golovkin", email = "gksitstrategy@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.setuptools]
packages = ["bitarray"]

# --- НАСТРОЙКИ CIBUILDWHEEL ДЛЯ СБОРКИ НА GITHUB ---
[tool.cibuildwheel]
# Собираем только для стандартного CPython (3.9 - 3.13)
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
# Пропускаем альтернативные интерпретаторы (PyPy) и специфичные сборки Linux
skip = "pp* *musllinux*"

[tool.cibuildwheel.linux]
# Собираем для стандартной архитектуры x86_64 и для серверов/процессоров ARM64
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
# Собираем универсальные пакеты для старых Mac (Intel) и новых Apple Silicon (M1/M2/M3)
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
# Собираем под стандартную 64-битную Windows
archs = ["AMD64"]
